Changelog for skalibs.

In 2.9.0.0
----------

 - Bugfixes.
 - Better support of out-of-path toolchains (among other things,
that means better autotools emulation).
 - Build more friendly to recent glibc.
 - Refactoring and optimization of scanning and formatting functions.


In 2.8.1.0
----------

 - Added skalibs_regcomp(), accepting empty regexes on BSDs.


In 2.8.0.1
----------

 - Bugfixes.
 - Better reporting in utc_from_tai() and localtm_from_*()


In 2.8.0.0
----------

 - Bugfixes.
 - avltreeb removed. (It used VLAs inside of structures, which is
GNU C, not C99.) The AVLTREEN_DECLARE_AND_INIT() macro should be
used instead.
 - New functions: env_dump(), mk?temp(), autosurf(), autosurf_name()
 - mkdir_unique() removed. (Duplicate functionality with mkdtemp.)
 - ancilautoclose and nbwaitall sysdeps removed.
 - New header: skalibs/posixishard.h
 - Static libraries are now PIC by default.


In 2.7.0.0
----------

 - Bugfixes.
 - New functions: ipc_timed_sendv(), unlink_void(), genset_deepfree(),
gensetdyn_deepfree(), skagetln_loose(), skagetlnsep_loose()
 - dir_close() now returns void and leaves errno unchanged
 - absolutepath(), sarealpath_tmp(), avl*_deletnode(), mininetstring, prot functions removed
 - djbunix.h doesn't include env.h anymore


In 2.6.4.0
----------

 - Bugfixes.
 - New functions: execvep_loose(), byte_zzero(), openb_read(), sig0_scan()
 - New function family: skalibs/genqdyn.h


In 2.6.3.1
----------

 - Bugfixes.


In 2.6.3.0
----------

 - New dir_fd function wrapping dirfd() (Solaris doesn't have dirfd())
 - memmem implementation for platforms that don't provide it.
 - memmem wrappers: byte_search, siovec_search.
 - New functions: atomic_symlink, skagetlnmaxsep, child_spawn3
 - New header: skalibs/posixplz.h, some header reorganization.
 - New family of functions: textmessage and textclient
 - skalibs/environ.h and skalibs/getpeereid.h are now obsolescent.
 - Bugfixes.


In 2.6.2.0
----------
