@@ -34,3 +34,5 @@ Thanks to:
   Samuel Holland <samuel@sholland.org>
   Jan Bramkamp <crest_maintainer@rlwinm.de>
   Johannes Nixdorf <mixi@shadowice.org>
+  Casper Ti. Vector <caspervector@gmail.com>
+  Guillermo <gdiazhartusch@gmail.com>
