@@ -2,7 +2,7 @@
 
 #include <skalibs/tai.h>
 
-int tain_sysclock (tain_t *a)
+int tain_wallclock_read (tain_t *a)
 {
   tain_t aa ;
   if (!sysclock_get(&aa)) return 0 ;
